// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Composer, voice scaffolding snapshots RecordingOverlay locks recording overlay tree when visible=true at 3.2s 1`] = `
<View
  accessibilityLabel="Recording in progress"
  accessibilityRole="alert"
  className="px-4 pt-3"
  entering={{}}
  exiting={{}}
  style={
    {
      "backgroundColor": "rgba(15, 15, 15, 0.95)",
      "borderRadius": 20,
      "paddingBottom": 16,
    }
  }
>
  <View
    className="flex-row items-center justify-center gap-2 mb-3"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#f87171",
            "borderRadius": 5,
            "height": 10,
            "width": 10,
          },
          {
            "opacity": 1,
          },
        ]
      }
    />
    <Text
      className="text-red-400 text-sm font-medium"
    >
      Recording
    </Text>
    <Text
      className="text-sm font-mono ml-2"
      style={
        {
          "color": "rgba(255, 255, 255, 0.68)",
        }
      }
    >
      00:03
    </Text>
  </View>
  <View
    className="items-center mb-4"
  >
    <View
      active={true}
      audioLevel={0.6}
      barCount={7}
      barWidth={3}
      color="#f87171"
      gap={3}
      maxHeight={32}
      minHeight={4}
      testID="waveform"
    />
  </View>
  <View
    className="flex-row items-center justify-center gap-8"
  >
    <View
      accessibilityLabel="Cancel recording"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="w-12 h-12 rounded-full items-center justify-center"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(255, 255, 255, 0.10)",
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.74)"
        size={22}
        testID="icon-x"
      />
    </View>
    <View
      accessibilityLabel="Send recording"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="w-14 h-14 rounded-full items-center justify-center active:opacity-80"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#f4f4f4",
        }
      }
    >
      <View
        color="#ffffff"
        size={24}
        testID="icon-check"
      />
    </View>
  </View>
</View>
`;

exports[`Composer, voice scaffolding snapshots VoiceInputButton locks disabled mic button tree (during streaming) 1`] = `
<View
  className="relative items-center justify-center"
>
  <View
    accessibilityHint="Tap to start or stop recording. Hold for instant push-to-talk. Long press for voice conversation mode."
    accessibilityLabel="Tap to record, hold for push-to-talk"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderRadius": 8,
          "padding": 6,
        },
        {
          "opacity": 0.5,
        },
      ]
    }
    testID="voice-input-button"
  >
    <View
      color="rgba(244, 244, 244, 0.74)"
      size={20}
      testID="icon-mic"
    />
  </View>
</View>
`;

exports[`Composer, voice scaffolding snapshots VoiceInputButton locks idle mic button tree 1`] = `
<View
  className="relative items-center justify-center"
>
  <View
    accessibilityHint="Tap to start or stop recording. Hold for instant push-to-talk. Long press for voice conversation mode."
    accessibilityLabel="Tap to record, hold for push-to-talk"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderRadius": 8,
          "padding": 6,
        },
        undefined,
      ]
    }
    testID="voice-input-button"
  >
    <View
      color="rgba(244, 244, 244, 0.74)"
      size={20}
      testID="icon-mic"
    />
  </View>
</View>
`;
